# Windowscy

./: .gitignore  CMakeLists.txt  README-CN.md  README.md
.github/workflows/: build-windows.yml  release-windows.yml
docs/: header-dependency-optimization-2026-04-08.md  ui-upgrade-options.md  ui-upgrade-tasklist.md  win32-app-split-todolist.md  windows-maccy-clone-todolist.md  winui3-settings-poc.md  项目说明-中文.md
experiments/winui3-settings-poc/: README.md
experiments/winui3-settings-poc/ClipLoom.SettingsPoC/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  README.md
experiments/winui3-settings-poc/ClipLoom.SettingsPoC/Bridge/: settings_snapshot_adapter.cpp  settings_snapshot_adapter.h
experiments/winui3-settings-poc/ClipLoom.SettingsPoC/ViewModels/: SettingsViewModel.cpp  SettingsViewModel.h
experiments/winui3-settings-poc/ClipLoom.SettingsPoC/Views/: AppearancePage.xaml  AppearancePage.xaml.cpp  AppearancePage.xaml.h  GeneralPage.xaml  GeneralPage.xaml.cpp  GeneralPage.xaml.h  PreviewPage.xaml  PreviewPage.xaml.cpp  PreviewPage.xaml.h
src/: CMakeLists.txt
src/app/: main_win32.cpp  run_win32_app.h  win32_app.cpp  win32_app.h  win32_app_anon.inc  win32_app_internal.cpp  win32_app_internal.h  win32_app_lifecycle_tray.cpp  win32_app_lifecycle_tray.inc  win32_app_message_handlers.cpp  win32_app_message_handlers.inc  win32_app_popup_input.cpp  win32_app_popup_input.inc  win32_app_settings.cpp  win32_app_window_procs.cpp  win32_app_window_procs.inc
src/core/: double_click_modifier.cpp  double_click_modifier.h  history_item.cpp  history_item.h  history_persistence.cpp  history_persistence.h  history_store.cpp  history_store.h  history_types.h  ignore_rules.cpp  ignore_rules.h  search.cpp  search.h  search_highlight.cpp  search_highlight.h  search_mode.h  settings.cpp  settings.h  settings_snapshot.cpp  settings_snapshot.h
src/platform/win32/: clipboard.cpp  clipboard.h  input.cpp  input.h  source_app.cpp  source_app.h  startup.cpp  startup.h  utf.cpp  utf.h
tests/: CMakeLists.txt  double_click_modifier_test.cpp  settings_snapshot_test.cpp  settings_test.cpp
